--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "author": "lahrasib",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.1",
     "node-fetch": "^3.2.10",
     "pm2": "^5.2.0",
     "puppeteer": "^16.0.0",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.0",
+    "qs": "^6.11.0",
     "random-useragent": "^0.5.0",
+    "request": "^2.88.2",
     "user-agents": "^1.0.1100"
   }
 }
